<resources>
    <string name="app_name">TsheetApp</string>
    <string name="let_s_get_s">Let\'s get started. What\'s your role?</string>
    <string name="adminrole">ADMIN</string>
    <string name="employeerole">EMPLOYEE</string>
    <string name="needhelp">Need Help?</string>
    <string name="email_or_us">Email or user ID</string>
    <string name="continue_str">CONTINUE</string>
    <string name="know_account">Don\'t know your WowSheets account info?</string>
    <string name="create_company">CREATE COMPANY ACCOUNT</string>
    <string name="name">Name</string>
    <string name="company_name">Company Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="policy_statement">By Tapping Create Account, you agree to our Terms and Services and Policy Statement</string>
    <string name="overview">Overview</string>
    <string name="day_total">DAY TOTAL</string>
    <string name="week_total">WEEK TOTAL</string>
    <string name="clocked_in">Clocked In</string>
    <string name="job">JOB</string>
    <string name="today_schedule">TODAY\'S SCHEDULE</string>
    <string name="no_shift_today">No shifts today</string>
    <string name="view_schedule">View Full Schedule</string>
    <string name="my_work">MY WORK</string>
    <string name="weekly_jobs">Weekly Jobs</string>
    <string name="no_job_codes">No Job codes</string>
    <string name="time_off">TIME OFF</string>
    <string name="weekly_job">Weekly Jobs</string>
    <string name="no_job_code">No job codes</string>
    <string name="type">TYPE</string>
    <string name="available">AVAILABLE</string>
    <string name="holiday">Holiday</string>
    <string name="sick">Sick</string>
    <string name="vacation">Vacation</string>
    <string name="paid">Paid</string>
    <string name="mytimecard">My Time Card</string>
    <string name="timesheets">Timesheets</string>
    <string name="schedule">Schedule</string>
    <string name="more">More</string>
    <string name="status">STATUS</string>
    <string name="off_clock">Off The Clock</string>
    <string name="start_time">Start Time</string>
    <string name="notes">NOTES</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="switch_str">Switch ></string>
    <string name="attachments">ATTACHMENTS</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="time_off_btn">Time Off</string>
    <string name="save_timesheet">SAVE TIMESHEET</string>
    <string name="add_timesheet">Add Timesheet</string>
    <string name="time_in_off">Time In/Out</string>
    <string name="duration">Duration</string>
    <string name="end_time">End Time</string>
    <string name="total">Total</string>
    <string name="type_str">Type</string>
    <string name="select_job">Select a Job</string>
    <string name="search">Search</string>
    <string name="add_job">Add Job</string>
    <string name="short_code">Short Code</string>
    <string name="is_sub_item">IS A SUB-ITEM OF</string>
    <string name="assign_to">ASSIGN TO</string>
    <string name="me">ME</string>
    <string name="every_one">EVERY ONE</string>
    <string name="signin">Sign In</string>
    <string name="userid_email_incorrect">User Id or Email is not correct</string>
    <string name="password_incorrect">Password is not Correct</string>
    <string name="enter_job_name">Enter Job Name</string>
    <string name="SHORT_CODE">SHORT CODE</string>
    <string name="enter_short_code">Enter Short Code</string>
    <string name="select_parent_job">Select Parent Job</string>
    <string name="ok">OK</string>
</resources>
