<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_dialog"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_btn"
                android:text="@string/take_photo"
                android:textAppearance="@style/button_text"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:id="@+id/take_photo"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/background_btn_bottom"
                android:text="@string/select_photo"
                android:textAppearance="@style/button_text"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:id="@+id/select_photo"
                />
        </LinearLayout>
        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cancel"
            android:background="@drawable/background_border"
            android:textAppearance="@style/button_text"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:layout_marginBottom="50dp"
            android:id="@+id/cancel"
            ></Button>
    </LinearLayout>

</RelativeLayout>