<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="1dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        >
        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/close"
            android:layout_marginLeft="19dp"
            android:background="#FFF"
            android:id="@+id/close"
            android:onClick="onClick"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_job"
            android:textAppearance="@style/s"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="100dp"
            android:background="#FFF"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E5E5E5"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#FFF"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="30dp"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="14dp"
                            android:layout_marginRight="14dp"
                            android:orientation="vertical"
                            >
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/name"
                                android:textAppearance="@style/text_help"
                                />
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@drawable/border_daytotal"
                                android:hint="@string/enter_job_name"
                                android:textColor="#0D65C6"
                                android:paddingLeft="7dp"
                                android:id="@+id/job_name"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="14dp"
                            android:layout_marginRight="14dp"
                            android:orientation="vertical"
                            android:layout_marginTop="14dp"
                            >
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/SHORT_CODE"
                                android:textAppearance="@style/text_help"
                                />
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@drawable/border_daytotal"
                                android:hint="@string/enter_short_code"
                                android:paddingLeft="7dp"
                                android:id="@+id/short_code"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="14dp"
                            android:layout_marginRight="14dp"
                            android:orientation="vertical"
                            android:layout_marginTop="14dp"
                            >
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/is_sub_item"
                                    android:textAppearance="@style/text_help"
                                    />
                                <Switch
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:id="@+id/sub_item"
                                    />
                            </RelativeLayout>

                            <Spinner
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:background="@drawable/border_daytotal"
                                android:hint="@string/select_parent_job"
                                android:paddingLeft="7dp"
                                android:enabled="false"
                                android:id="@+id/parent_job"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="14dp"
                            android:layout_marginRight="14dp"
                            android:orientation="vertical"
                            android:layout_marginTop="14dp"
                            >
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/assign_to"
                                />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:background="@drawable/border_daytotal"
                                android:padding="5dp"
                                >
                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Me"
                                        android:layout_centerVertical="true"
                                        />
                                    <CheckBox
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentRight="true"
                                        android:id="@+id/checkbox_me"
                                        />
                                </RelativeLayout>
                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Every One"
                                        android:layout_centerVertical="true"
                                        />
                                    <CheckBox
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentRight="true"
                                        android:id="@+id/checkbox_everyone"
                                        />
                                </RelativeLayout>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_alignParentBottom="true"
            android:background="#FFF"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="@drawable/button_with_shadow"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_centerInParent="true"
                android:text="@string/add_job"
                android:id="@+id/button_timesheet"
                android:textAppearance="@style/buttonstyle"
                />
        </RelativeLayout>
    </RelativeLayout>


</LinearLayout>