<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:layout_marginRight="24dp"
        >
        <ImageView
            android:layout_width="66dp"
            android:layout_height="49dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="22dp"
            android:src="@drawable/logo"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="146dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_or_us"
                android:textAppearance="@style/email_or_us"
                android:gravity="top"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:errorEnabled="true"
                android:id="@+id/userid"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user"
                    android:paddingLeft="9dp"
                    >
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:errorEnabled="true"
                android:id="@+id/password"
                app:passwordToggleEnabled="true"
                android:visibility="gone"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password"
                    android:inputType="textPassword"
                    >
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@drawable/adminbtn"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/buttonstyle"
                android:text="@string/continue_str"
                android:id="@+id/button_continue"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
                android:text="@string/know_account"
                android:textAppearance="@style/email_or_us"
                android:gravity="top"
                android:id="@+id/create_account"
                android:textAlignment="center"
                android:onClick="onClick"
                />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>