<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFFFF"
    >
    <LinearLayout
        android:id="@+id/component1"
        android:layout_marginTop="32.5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/homebackground"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="84dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="78dp"
                    android:src="@drawable/logo"
                    />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="261dp"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/let_s_get_s"
                            android:gravity="center_horizontal|top"
                            android:textAppearance="@style/let_s_get_s"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        >
                        <Button
                            android:id="@+id/button_admin"
                            android:layout_width="175dp"
                            android:layout_height="41dp"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/adminbtn"
                            android:text="@string/adminrole"
                            android:textAppearance="@style/buttonstyle"
                            />
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        >
                        <Button
                            android:id="@+id/button_employee"
                            android:layout_width="175dp"
                            android:layout_height="41dp"
                            android:background="@drawable/adminbtn"
                            android:layout_centerHorizontal="true"
                            android:text="@string/employeerole"
                            android:textAppearance="@style/buttonstyle"
                            />
                    </RelativeLayout>
                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="18dp"
                    >
                    <TextView
                        android:layout_width="88dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:text="@string/needhelp"
                        android:gravity="center_horizontal|top"
                        android:textAppearance="@style/text_help"
                        android:textSize="12dp"
                        />
                    <TextView
                        android:layout_width="109dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="(888)000-0000"
                        android:gravity="center_horizontal|top"
                        android:textAppearance="@style/phone_num"
                        android:textSize="12dp"
                        />
                    <TextView
                        android:layout_width="88dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="24dp"
                        android:gravity="center_horizontal|top"
                        android:text="or Text us"
                        android:textAppearance="@style/text_help"
                        android:textSize="12dp"
                        />
                </RelativeLayout>
            </RelativeLayout>


        </LinearLayout>



    </LinearLayout>
</RelativeLayout>